--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://getssh.github.io/TechUp-project-journal",
   "name": "html-tailwind-starter",
   "version": "1.0.0",
   "description": "",
@@ -12,6 +13,8 @@
     }
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "watch": "npm-watch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "postcss styles.css -o src/styles.css",
@@ -27,6 +30,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.2.2",
+    "gh-pages": "^5.0.0",
     "npm-watch": "^0.11.0"
   }
 }
