--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     }
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "watch": "npm-watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "postcss styles.css -o src/styles.css",
     "dev": "concurrently \"npm run build && live-server src --port=8080\" \"npm run watch\""
