--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   },
   "scripts": {
     "watch": "npm-watch",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "postcss styles.css -o src/styles.css",
-    "dev": "concurrently \"npm run build && live-server src --port=8080\" \"npm run watch\""
+    "dev": "concurrently \"npm run build && live-server src --port=8080\" \"npm run watch\"",
+    "deploy": "npm run build && gh-pages -d src"
   },
   "keywords": [],
   "author": "",
